Added additional CPA info to be stored in the pickles

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -136,7 +136,7 @@
        "4                N                     Y             N      N  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -414,7 +414,7 @@
     ")  # low memory parameter for mixed types\n",
     "general_df = general_all[\n",
     "    [\n",
-    "        'DBKEY', 'AUDITYEAR', 'STATE', 'CPASTATE',\n",
+    "        'DBKEY', 'AUDITYEAR', 'STATE', 'CPASTATE', 'CPAPHONE',\n",
     "        'TYPEOFENTITY', 'OVERSIGHTAGENCY', 'TOTFEDEXPEND'\n",
     "    ]\n",
     "]\n",
@@ -423,6 +423,12 @@
     ")\n",
     "general_df = general_df.assign(\n",
     "    CPAFIRMNAME=general_all['CPAFIRMNAME'].str.strip().str.replace(r'[^\\w\\s]', '')\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    CPACONTACT=general_all['CPACONTACT'].str.strip().str.replace(r'[^\\w\\s]', '')\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    CPATITLE=general_all['CPATITLE'].str.strip().str.replace(r'[^\\w\\s]', '')\n",
     ")\n",
     "general_df = general_df.assign(\n",
     "    ZIPCODE=pd.to_numeric(general_all['ZIPCODE'].str[:5], errors='coerce')\n",
