Added a compliance_trends.ipynb notebook to check FS issues rather than TYPEREPORT_FS.

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -415,7 +415,9 @@
     "general_df = general_all[\n",
     "    [\n",
     "        'DBKEY', 'AUDITYEAR', 'STATE', 'CPASTATE', 'CPAPHONE',\n",
-    "        'TYPEOFENTITY', 'OVERSIGHTAGENCY', 'TOTFEDEXPEND'\n",
+    "        'TYPEOFENTITY', 'OVERSIGHTAGENCY', 'TOTFEDEXPEND',\n",
+    "        'REPORTABLECONDITION', 'MATERIALWEAKNESS', 'MATERIALNONCOMPLIANCE',\n",
+    "        'REPORTABLECONDITION_MP', 'MATERIALWEAKNESS_MP', 'QCOSTS'\n",
     "    ]\n",
     "]\n",
     "general_df = general_df.assign(\n",
@@ -457,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -466,249 +468,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['AUDITYEAR', 'DBKEY', 'TYPEOFENTITY', 'FYENDDATE', 'AUDITTYPE',\n",
-      "       'PERIODCOVERED', 'NUMBERMONTHS', 'EIN', 'MULTIPLEEINS', 'EINSUBCODE',\n",
-      "       'DUNS', 'MULTIPLEDUNS', 'AUDITEENAME', 'STREET1', 'STREET2', 'CITY',\n",
-      "       'STATE', 'ZIPCODE', 'AUDITEECONTACT', 'AUDITEETITLE', 'AUDITEEPHONE',\n",
-      "       'AUDITEEFAX', 'AUDITEEEMAIL', 'AUDITEEDATESIGNED', 'AUDITEENAMETITLE',\n",
-      "       'CPAFIRMNAME', 'CPASTREET1', 'CPASTREET2', 'CPACITY', 'CPASTATE',\n",
-      "       'CPAZIPCODE', 'CPACONTACT', 'CPATITLE', 'CPAPHONE', 'CPAFAX',\n",
-      "       'CPAEMAIL', 'CPADATESIGNED', 'COG_OVER', 'COGAGENCY', 'OVERSIGHTAGENCY',\n",
-      "       'TYPEREPORT_FS', 'SP_FRAMEWORK', 'SP_FRAMEWORK_REQUIRED',\n",
-      "       'TYPEREPORT_SP_FRAMEWORK', 'GOINGCONCERN', 'REPORTABLECONDITION',\n",
-      "       'MATERIALWEAKNESS', 'MATERIALNONCOMPLIANCE', 'TYPEREPORT_MP',\n",
-      "       'DUP_REPORTS', 'DOLLARTHRESHOLD', 'LOWRISK', 'REPORTABLECONDITION_MP',\n",
-      "       'MATERIALWEAKNESS_MP', 'QCOSTS', 'CYFINDINGS', 'PYSCHEDULE',\n",
-      "       'TOTFEDEXPEND', 'DATEFIREWALL', 'PREVIOUSDATEFIREWALL',\n",
-      "       'REPORTREQUIRED', 'MULTIPLE_CPAS', 'AUDITOR_EIN',\n",
-      "       'FACACCEPTEDDATE                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 '],\n",
+      "Index(['DBKEY', 'AUDITYEAR', 'STATE', 'CPASTATE', 'CPAPHONE', 'TYPEOFENTITY',\n",
+      "       'OVERSIGHTAGENCY', 'TOTFEDEXPEND', 'REPORTABLECONDITION',\n",
+      "       'MATERIALWEAKNESS', 'MATERIALNONCOMPLIANCE', 'REPORTABLECONDITION_MP',\n",
+      "       'MATERIALWEAKNESS_MP', 'QCOSTS', 'AUDITEENAME', 'CPAFIRMNAME',\n",
+      "       'CPACONTACT', 'CPATITLE', 'ZIPCODE', 'CPAZIPCODE', 'TYPEREPORT_FS',\n",
+      "       'TYPEREPORT_MP', 'CITY', 'CPACITY', 'EIN'],\n",
       "      dtype='object')\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>AUDITYEAR</th>\n",
-       "      <th>DBKEY</th>\n",
-       "      <th>TYPEOFENTITY</th>\n",
-       "      <th>FYENDDATE</th>\n",
-       "      <th>AUDITTYPE</th>\n",
-       "      <th>PERIODCOVERED</th>\n",
-       "      <th>NUMBERMONTHS</th>\n",
-       "      <th>EIN</th>\n",
-       "      <th>MULTIPLEEINS</th>\n",
-       "      <th>EINSUBCODE</th>\n",
-       "      <th>...</th>\n",
-       "      <th>QCOSTS</th>\n",
-       "      <th>CYFINDINGS</th>\n",
-       "      <th>PYSCHEDULE</th>\n",
-       "      <th>TOTFEDEXPEND</th>\n",
-       "      <th>DATEFIREWALL</th>\n",
-       "      <th>PREVIOUSDATEFIREWALL</th>\n",
-       "      <th>REPORTREQUIRED</th>\n",
-       "      <th>MULTIPLE_CPAS</th>\n",
-       "      <th>AUDITOR_EIN</th>\n",
-       "      <th>FACACCEPTEDDATE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1997</td>\n",
-       "      <td>100000</td>\n",
-       "      <td></td>\n",
-       "      <td>30-SEP-97</td>\n",
-       "      <td>S</td>\n",
-       "      <td>A</td>\n",
-       "      <td></td>\n",
-       "      <td>730776899</td>\n",
-       "      <td>N</td>\n",
-       "      <td>000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>N</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>2195498</td>\n",
-       "      <td>15-MAY-98</td>\n",
-       "      <td></td>\n",
-       "      <td>Y</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>05-MAR-98                                     ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1998</td>\n",
-       "      <td>100000</td>\n",
-       "      <td></td>\n",
-       "      <td>30-SEP-98</td>\n",
-       "      <td>S</td>\n",
-       "      <td>A</td>\n",
-       "      <td></td>\n",
-       "      <td>730776899</td>\n",
-       "      <td>N</td>\n",
-       "      <td>000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>N</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>2443678</td>\n",
-       "      <td>17-JUN-99</td>\n",
-       "      <td></td>\n",
-       "      <td>Y</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>24-MAR-99                                     ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1999</td>\n",
-       "      <td>100000</td>\n",
-       "      <td></td>\n",
-       "      <td>30-SEP-99</td>\n",
-       "      <td>S</td>\n",
-       "      <td>A</td>\n",
-       "      <td></td>\n",
-       "      <td>730776899</td>\n",
-       "      <td>N</td>\n",
-       "      <td>000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>N</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>2715892</td>\n",
-       "      <td>15-FEB-00</td>\n",
-       "      <td></td>\n",
-       "      <td>N</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>03-FEB-00                                     ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>100000</td>\n",
-       "      <td></td>\n",
-       "      <td>30-SEP-00</td>\n",
-       "      <td>S</td>\n",
-       "      <td>A</td>\n",
-       "      <td></td>\n",
-       "      <td>730776899</td>\n",
-       "      <td>N</td>\n",
-       "      <td>000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>N</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>2875293</td>\n",
-       "      <td>28-FEB-01</td>\n",
-       "      <td></td>\n",
-       "      <td>N</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>19-JAN-01                                     ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2001</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>908</td>\n",
-       "      <td>30-SEP-01</td>\n",
-       "      <td>S</td>\n",
-       "      <td>A</td>\n",
-       "      <td></td>\n",
-       "      <td>730776899</td>\n",
-       "      <td>N</td>\n",
-       "      <td>000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>N</td>\n",
-       "      <td>2875169</td>\n",
-       "      <td>12-MAR-02</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>17-JAN-02                                     ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 64 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   AUDITYEAR   DBKEY TYPEOFENTITY  FYENDDATE AUDITTYPE PERIODCOVERED  \\\n",
-       "0       1997  100000               30-SEP-97         S             A   \n",
-       "1       1998  100000               30-SEP-98         S             A   \n",
-       "2       1999  100000               30-SEP-99         S             A   \n",
-       "3       2000  100000               30-SEP-00         S             A   \n",
-       "4       2001  100000          908  30-SEP-01         S             A   \n",
-       "\n",
-       "    NUMBERMONTHS        EIN MULTIPLEEINS EINSUBCODE  \\\n",
-       "0                 730776899            N        000   \n",
-       "1                 730776899            N        000   \n",
-       "2                 730776899            N        000   \n",
-       "3                 730776899            N        000   \n",
-       "4                 730776899            N        000   \n",
-       "\n",
-       "                                                                                                                                                                                                                                                                                                                                ...                                                                                                                                                                                                                                                                                                                                 \\\n",
-       "0                                                                                                                                                                                                                                                                                                                               ...                                                                                                                                                                                                                                                                                                                                  \n",
-       "1                                                                                                                                                                                                                                                                                                                               ...                                                                                                                                                                                                                                                                                                                                  \n",
-       "2                                                                                                                                                                                                                                                                                                                               ...                                                                                                                                                                                                                                                                                                                                  \n",
-       "3                                                                                                                                                                                                                                                                                                                               ...                                                                                                                                                                                                                                                                                                                                  \n",
-       "4                                                                                                                                                                                                                                                                                                                               ...                                                                                                                                                                                                                                                                                                                                  \n",
-       "\n",
-       "  QCOSTS CYFINDINGS PYSCHEDULE TOTFEDEXPEND DATEFIREWALL PREVIOUSDATEFIREWALL  \\\n",
-       "0      N                            2195498    15-MAY-98                        \n",
-       "1      N                            2443678    17-JUN-99                        \n",
-       "2      N                            2715892    15-FEB-00                        \n",
-       "3      N                            2875293    28-FEB-01                        \n",
-       "4      N          N          N      2875169    12-MAR-02                        \n",
-       "\n",
-       "  REPORTREQUIRED MULTIPLE_CPAS AUDITOR_EIN  \\\n",
-       "0              Y                             \n",
-       "1              Y                             \n",
-       "2              N                             \n",
-       "3              N                             \n",
-       "4                                            \n",
-       "\n",
-       "  FACACCEPTEDDATE                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   \n",
-       "0  05-MAR-98                                     ...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \n",
-       "1  24-MAR-99                                     ...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \n",
-       "2  03-FEB-00                                     ...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \n",
-       "3  19-JAN-01                                     ...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \n",
-       "4  17-JAN-02                                     ...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                \n",
-       "\n",
-       "[5 rows x 64 columns]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(general_all.columns)\n",
-    "general_all.head()"
+    "print(general_df.columns)"
    ]
   },
   {
