Did some reorganization of notebooks and data after downloading updated FAC database (including 2018). In particular, reorganized and renamed the export notebooks so that the notebooks can be used to generate multiple files to export (in /data/ihwang/data_journalism/allfac/export) instead of creating a new notebook per state/entity of interest.

--- a/export/export_state_all.ipynb
+++ b/export/export_state_all.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# This notebook reads in processed FAC data and exports a CSV file of HI audits"
+    "# This notebook reads in processed FAC data and exports a CSV file of all audits for a given state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -24,24 +24,21 @@
     "from collections import Counter\n",
     "\n",
     "\n",
-    "# FAC data\n",
-    "file_names = ['findings', 'general']\n",
-    "[findings_df, general_df]  = [\n",
-    "    pd.read_pickle(processed_path + '%s.pkl' %file_name) for file_name in file_names\n",
-    "]\n",
-    "\n",
-    "\n",
+    "# Select state\n",
     "state = 'HI'\n",
     "\n",
     "\n",
-    "# Export general dataframe\n",
+    "# FAC data\n",
+    "path = '/data/ihwang/data_journalism/allfac'\n",
+    "general_df = pd.read_pickle(path + '/processed/general.pkl')\n",
+    "# Export dataframe\n",
     "state_df = general_df[general_df['STATE'] == state].copy()\n",
-    "# state_df.to_csv(processed_path + 'FAC_%s.csv' %state, index=False)"
+    "state_df.to_csv(path + '/export/FAC_%s.csv' %state, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -71,11 +68,16 @@
        "      <th>AUDITYEAR</th>\n",
        "      <th>STATE</th>\n",
        "      <th>CPASTATE</th>\n",
+       "      <th>CPAPHONE</th>\n",
        "      <th>TYPEOFENTITY</th>\n",
        "      <th>OVERSIGHTAGENCY</th>\n",
        "      <th>TOTFEDEXPEND</th>\n",
-       "      <th>AUDITEENAME</th>\n",
+       "      <th>REPORTABLECONDITION</th>\n",
+       "      <th>MATERIALWEAKNESS</th>\n",
+       "      <th>...</th>\n",
        "      <th>CPAFIRMNAME</th>\n",
+       "      <th>CPACONTACT</th>\n",
+       "      <th>CPATITLE</th>\n",
        "      <th>ZIPCODE</th>\n",
        "      <th>CPAZIPCODE</th>\n",
        "      <th>TYPEREPORT_FS</th>\n",
@@ -87,16 +89,21 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>51251</th>\n",
+       "      <th>52358</th>\n",
        "      <td>126455</td>\n",
        "      <td>1998</td>\n",
        "      <td>HI</td>\n",
        "      <td>HI</td>\n",
+       "      <td>8085419332</td>\n",
        "      <td></td>\n",
        "      <td>43</td>\n",
        "      <td>2782370</td>\n",
-       "      <td>CALIFORNIA ASSOCIATION FOR RESEARCH IN ASTRONOMY</td>\n",
+       "      <td>N</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
        "      <td>KPMG LLP</td>\n",
+       "      <td>RALPH T KANETOKU</td>\n",
+       "      <td>PARTNER</td>\n",
        "      <td>96743.0</td>\n",
        "      <td>96813.0</td>\n",
        "      <td>U</td>\n",
@@ -106,16 +113,21 @@
        "      <td>953972799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51252</th>\n",
+       "      <th>52359</th>\n",
        "      <td>126455</td>\n",
        "      <td>1999</td>\n",
        "      <td>HI</td>\n",
        "      <td>HI</td>\n",
+       "      <td>8085419332</td>\n",
        "      <td></td>\n",
        "      <td>43</td>\n",
        "      <td>7832546</td>\n",
-       "      <td>CALIFORNIA ASSOCIATION FOR RESEARCH IN ASTRONOMY</td>\n",
+       "      <td>N</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
        "      <td>KPMG LLP</td>\n",
+       "      <td>RALPH T KANETOKU</td>\n",
+       "      <td>PARTNER</td>\n",
        "      <td>96743.0</td>\n",
        "      <td>96813.0</td>\n",
        "      <td>U</td>\n",
@@ -125,16 +137,21 @@
        "      <td>953972799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51253</th>\n",
+       "      <th>52360</th>\n",
        "      <td>126455</td>\n",
        "      <td>2000</td>\n",
        "      <td>HI</td>\n",
        "      <td>HI</td>\n",
+       "      <td>8085317286</td>\n",
        "      <td></td>\n",
        "      <td>43</td>\n",
        "      <td>9236123</td>\n",
-       "      <td>CALIFORNIA ASSOCIATION FOR RESEARCH IN ASTRONOMY</td>\n",
+       "      <td>N</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
        "      <td>KPMG LLP</td>\n",
+       "      <td>RALPH KANETOKU</td>\n",
+       "      <td>PARTNER</td>\n",
        "      <td>96743.0</td>\n",
        "      <td>96813.0</td>\n",
        "      <td>U</td>\n",
@@ -144,16 +161,21 @@
        "      <td>953972799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51254</th>\n",
+       "      <th>52361</th>\n",
        "      <td>126455</td>\n",
        "      <td>2001</td>\n",
        "      <td>HI</td>\n",
        "      <td>HI</td>\n",
+       "      <td>8085317286</td>\n",
        "      <td>909</td>\n",
        "      <td>43</td>\n",
        "      <td>6824216</td>\n",
-       "      <td>CALIFORNIA ASSOCIATION FOR RESEARCH IN ASTRONOMY</td>\n",
+       "      <td>N</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
        "      <td>KPMG LLP</td>\n",
+       "      <td>RALPH KANETOKU</td>\n",
+       "      <td>PARTNER</td>\n",
        "      <td>96743.0</td>\n",
        "      <td>96813.0</td>\n",
        "      <td>U</td>\n",
@@ -163,16 +185,21 @@
        "      <td>953972799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>51255</th>\n",
+       "      <th>52362</th>\n",
        "      <td>126455</td>\n",
        "      <td>2002</td>\n",
        "      <td>HI</td>\n",
        "      <td>HI</td>\n",
+       "      <td>8085317286</td>\n",
        "      <td>909</td>\n",
        "      <td>43</td>\n",
        "      <td>5664555</td>\n",
-       "      <td>CALIFORNIA ASSOCIATION FOR RESEARCH IN ASTRONOMY</td>\n",
+       "      <td>N</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
        "      <td>KPMG LLP</td>\n",
+       "      <td>RALPH KANETOKU</td>\n",
+       "      <td>PARTNER</td>\n",
        "      <td>96746.0</td>\n",
        "      <td>96813.0</td>\n",
        "      <td>U</td>\n",
@@ -183,45 +210,48 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        DBKEY  AUDITYEAR STATE CPASTATE TYPEOFENTITY OVERSIGHTAGENCY  \\\n",
-       "51251  126455       1998    HI       HI                           43   \n",
-       "51252  126455       1999    HI       HI                           43   \n",
-       "51253  126455       2000    HI       HI                           43   \n",
-       "51254  126455       2001    HI       HI          909              43   \n",
-       "51255  126455       2002    HI       HI          909              43   \n",
+       "        DBKEY  AUDITYEAR STATE CPASTATE    CPAPHONE TYPEOFENTITY  \\\n",
+       "52358  126455       1998    HI       HI  8085419332                \n",
+       "52359  126455       1999    HI       HI  8085419332                \n",
+       "52360  126455       2000    HI       HI  8085317286                \n",
+       "52361  126455       2001    HI       HI  8085317286          909   \n",
+       "52362  126455       2002    HI       HI  8085317286          909   \n",
        "\n",
-       "       TOTFEDEXPEND                                       AUDITEENAME  \\\n",
-       "51251       2782370  CALIFORNIA ASSOCIATION FOR RESEARCH IN ASTRONOMY   \n",
-       "51252       7832546  CALIFORNIA ASSOCIATION FOR RESEARCH IN ASTRONOMY   \n",
-       "51253       9236123  CALIFORNIA ASSOCIATION FOR RESEARCH IN ASTRONOMY   \n",
-       "51254       6824216  CALIFORNIA ASSOCIATION FOR RESEARCH IN ASTRONOMY   \n",
-       "51255       5664555  CALIFORNIA ASSOCIATION FOR RESEARCH IN ASTRONOMY   \n",
+       "      OVERSIGHTAGENCY  TOTFEDEXPEND REPORTABLECONDITION MATERIALWEAKNESS  \\\n",
+       "52358              43       2782370                   N                    \n",
+       "52359              43       7832546                   N                    \n",
+       "52360              43       9236123                   N                    \n",
+       "52361              43       6824216                   N                    \n",
+       "52362              43       5664555                   N                    \n",
        "\n",
-       "      CPAFIRMNAME  ZIPCODE  CPAZIPCODE TYPEREPORT_FS TYPEREPORT_MP     CITY  \\\n",
-       "51251    KPMG LLP  96743.0     96813.0             U             U  KAMUELA   \n",
-       "51252    KPMG LLP  96743.0     96813.0             U             U  KAMUELA   \n",
-       "51253    KPMG LLP  96743.0     96813.0             U             U  KAMUELA   \n",
-       "51254    KPMG LLP  96743.0     96813.0             U             U  KAMUELA   \n",
-       "51255    KPMG LLP  96746.0     96813.0             U             U  KAMUELA   \n",
+       "         ...     CPAFIRMNAME        CPACONTACT CPATITLE  ZIPCODE CPAZIPCODE  \\\n",
+       "52358    ...        KPMG LLP  RALPH T KANETOKU  PARTNER  96743.0    96813.0   \n",
+       "52359    ...        KPMG LLP  RALPH T KANETOKU  PARTNER  96743.0    96813.0   \n",
+       "52360    ...        KPMG LLP    RALPH KANETOKU  PARTNER  96743.0    96813.0   \n",
+       "52361    ...        KPMG LLP    RALPH KANETOKU  PARTNER  96743.0    96813.0   \n",
+       "52362    ...        KPMG LLP    RALPH KANETOKU  PARTNER  96746.0    96813.0   \n",
        "\n",
-       "        CPACITY        EIN  \n",
-       "51251  HONOLULU  953972799  \n",
-       "51252  HONOLULU  953972799  \n",
-       "51253  HONOLULU  953972799  \n",
-       "51254  HONOLULU  953972799  \n",
-       "51255  HONOLULU  953972799  "
+       "      TYPEREPORT_FS TYPEREPORT_MP     CITY   CPACITY        EIN  \n",
+       "52358             U             U  KAMUELA  HONOLULU  953972799  \n",
+       "52359             U             U  KAMUELA  HONOLULU  953972799  \n",
+       "52360             U             U  KAMUELA  HONOLULU  953972799  \n",
+       "52361             U             U  KAMUELA  HONOLULU  953972799  \n",
+       "52362             U             U  KAMUELA  HONOLULU  953972799  \n",
+       "\n",
+       "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "entity_df.head()"
+    "state_df.head()"
    ]
   },
   {
@@ -250,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
