Edited a naming issue with agency_dict and entity_dict python pickles

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -227,7 +227,7 @@
     "        agency_dict[prefix] = ' '.join(agency)\n",
     "        \n",
     "        \n",
-    "with open(fac_path + '/processed/agency_dict', 'wb') as f_w:\n",
+    "with open(fac_path + '/processed/agency_dict.pkl', 'wb') as f_w:\n",
     "    pickle.dump(agency_dict, f_w)"
    ]
   },
@@ -260,7 +260,7 @@
     "        entity_dict[code] = ' '.join(entity)\n",
     "        \n",
     "        \n",
-    "with open(fac_path + '/processed/entity_dict', 'wb') as f_w:\n",
+    "with open(fac_path + '/processed/entity_dict.pkl', 'wb') as f_w:\n",
     "    pickle.dump(entity_dict, f_w)"
    ]
   },
