cleaned up the megaplot in general_trends.ipynb

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -12,6 +12,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import re"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -20,17 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import re\n",
-    "\n",
     "fac_path = '/data/ihwang/data_journalism/allfac'\n",
     "findings = '/raw/findings.txt'\n",
     "###############################################################################\n",
@@ -69,12 +78,12 @@
     "    ]\n",
     "]\n",
     "findings_df.head()\n",
-    "findings_df.to_pickle(fac_path + 'processed/findings.pkl')"
+    "findings_df.to_pickle(fac_path + '/processed/findings.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +99,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -164,6 +173,7 @@
     "general_df = general_df.assign(\n",
     "    EIN=pd.to_numeric(general_all['EIN'].str.split('-').str.get(-1))\n",
     ")\n",
+    "general_df.apply(lambda x: x.str.upper() if(x.dtype == 'object') else x)  # convert all text to uppercase\n",
     "general_df.head()\n",
     "general_df.to_pickle(fac_path + 'processed/general.pkl')"
    ]
