More tinkering with general_trends.ipynb; added an option to sort data by bad findings (A or D TYPEREPORT, or Y for other fields)

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -135,9 +135,7 @@
     "general_df = general_all[\n",
     "    [\n",
     "        'DBKEY', 'AUDITYEAR', 'STATE', 'CPASTATE', 'CPAPHONE',\n",
-    "        'TYPEOFENTITY', 'OVERSIGHTAGENCY', 'TOTFEDEXPEND',\n",
-    "        'REPORTABLECONDITION', 'MATERIALWEAKNESS', 'MATERIALNONCOMPLIANCE',\n",
-    "        'REPORTABLECONDITION_MP', 'MATERIALWEAKNESS_MP', 'QCOSTS'\n",
+    "        'TYPEOFENTITY', 'OVERSIGHTAGENCY', 'TOTFEDEXPEND'\n",
     "    ]\n",
     "]\n",
     "general_df = general_df.assign(\n",
@@ -163,6 +161,24 @@
     ")\n",
     "general_df = general_df.assign(\n",
     "    TYPEREPORT_MP=general_all['TYPEREPORT_MP'].str.strip()\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    REPORTABLECONDITION=general_all['REPORTABLECONDITION'].str.strip()\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    MATERIALWEAKNESS=general_all['MATERIALWEAKNESS'].str.strip()\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    MATERIALNONCOMPLIANCE=general_all['MATERIALNONCOMPLIANCE'].str.strip()\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    REPORTABLECONDITION_MP=general_all['REPORTABLECONDITION_MP'].str.strip()\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    MATERIALWEAKNESS_MP=general_all['MATERIALWEAKNESS_MP'].str.strip()\n",
+    ")\n",
+    "general_df = general_df.assign(\n",
+    "    QCOSTS=general_all['QCOSTS'].str.strip()\n",
     ")\n",
     "general_df = general_df.assign(\n",
     "    CITY=general_all['CITY'].str.strip()\n",
