Significantly revamed general_trends.ipynb based on discussion with Bethney today

--- a/process_fac_data.ipynb
+++ b/process_fac_data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,8 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "import pickle"
    ]
   },
   {
@@ -237,9 +238,6 @@
    },
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "\n",
-    "\n",
     "fac_path = '/data/ihwang/data_journalism/allfac'\n",
     "prefix_table = '/raw/manual/prefix_table.txt'\n",
     "\n",
